--- a/bgx/families/smart_bgt_python/Dockerfile
+++ b/bgx/families/smart_bgt_python/Dockerfile
@@ -40,7 +40,8 @@ RUN apt-get install -y -q \
     python3-toml \
     python3-yaml \
     python3-zmq  \
-    python3-pip
+    python3-pip  \
+    python3-secp256k1
 
 # we should use only bionic for web3.py
 RUN pip3 install web3
