Added batch format wraping for transaction of BGX REST API

--- a/bgx/rest-api/rest_api/Dockerfile
+++ b/bgx/rest-api/rest_api/Dockerfile
@@ -46,7 +46,8 @@ RUN apt-get update && apt-get install -y \
     python3-pip
 
 RUN pip3 install pycryptodome \
-    ecdsa
+    ecdsa \
+    cbor
 
 RUN mkdir /var/log/sawtooth
 
