Updated web_app(added wallet founds and refresh button), added method for getting founds, updated make transaction methof

--- a/bgx/rest-api/docker-compose_aws.yaml
+++ b/bgx/rest-api/docker-compose_aws.yaml
@@ -29,7 +29,7 @@ services:
         cd ../
         python3 setup.py clean --all
         python3 setup.py build
-        sawtooth-rest-api -vv --connect tcp://validator:4004  --bind rest-api-a:8009
+        sawtooth-rest-api -vv --connect tcp://18.222.233.160:4004  --bind rest-api-a:8009
       "
     stop_signal: SIGKILL
 
