--- a/bgx/docker/docker-compose-bgx.yaml
+++ b/bgx/docker/docker-compose-bgx.yaml
@@ -19,7 +19,7 @@ services:
   settings-tp:
     build:
       context: ../..
-      dockerfile: bgx/docker/settings/Dockerfile
+      dockerfile: bgx/docker/settings/Dockerfile-${DISTR}
       args:
         - http_proxy
         - https_proxy
@@ -46,7 +46,7 @@ services:
   bgt-tp-python:
     build:
       context: ../..
-      dockerfile: bgx/families/bgt_python/Dockerfile
+      dockerfile: bgx/families/bgt_python/Dockerfile-${DISTR}
       args:
         - http_proxy
         - https_proxy
@@ -73,7 +73,7 @@ services:
   client:
     build:
       context: ../..
-      dockerfile: bgx/docker/sawtooth-shell
+      dockerfile: bgx/docker/sawtooth-shell-${DISTR}
       args:
         - http_proxy
         - https_proxy
@@ -98,7 +98,7 @@ services:
   validator:
     build:
       context: ../..
-      dockerfile: bgx/docker/validator/Dockerfile
+      dockerfile: bgx/docker/validator/Dockerfile-${DISTR}
       args:
         - http_proxy
         - https_proxy
@@ -146,7 +146,7 @@ services:
   rest-api:
     build:
       context: ../..
-      dockerfile: bgx/docker/rest_api/Dockerfile
+      dockerfile: bgx/docker/rest_api/Dockerfile-${DISTR}
       args:
         - http_proxy
         - https_proxy
@@ -176,7 +176,7 @@ services:
   devmode-python:
     build:
       context: ../..
-      dockerfile: bgx/consensus/devmode_python/Dockerfile
+      dockerfile: bgx/consensus/devmode_python/Dockerfile-${DISTR}
       args:
         - http_proxy
         - https_proxy
