--- a/bgx/consensus/devmode_python/Dockerfile-bionic
+++ b/bgx/consensus/devmode_python/Dockerfile-bionic
@@ -11,13 +11,10 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
-# docker build -f sdk/examples/intkey_python/Dockerfile -t intkey-tp-python-local .
-
-# -------------=== intkey-tp-python build ===-------------
+# -------------=== devmode-python build ===-------------
 
 FROM ubuntu:bionic
-
+ARG BGX_TOP
 RUN apt-get update \
  && apt-get install gnupg -y
 
@@ -38,19 +35,26 @@ RUN apt-get install -y -q \
 
 RUN apt-get install -y -q \
     python3-cbor \
+    python3-cryptography>-1.7.1 \
+    python3-grpcio \
+    python3-grpcio-tools \
     python3-colorlog \
+    python3-lmdb \
+    python3-protobuf \
+    python3-requests \
     python3-toml \
     python3-yaml \
-    python3-zmq
+    python3-zmq  \
+    python3-secp256k1
 
 RUN mkdir -p /var/log/sawtooth
 
-ENV PATH=$PATH:/project/sawtooth-core/bin
+ENV PATH=$PATH:/project/$BGX_TOP/bgx/bin:/project/$BGX_TOP/bin
 
-WORKDIR /project/sawtooth-core
+WORKDIR /project/$BGX_TOP
 
-CMD echo "\033[0;32m--- Building intkey-tp-python ---\n\033[0m" \
- && bin/protogen \
- && cd sdk/examples/intkey_python \
+CMD echo "\033[0;32m--- Building devmode-python ---\n\033[0m" \
+ && bgx/bin/protogen \
+ && cd bgx/consensus/devmode_python \
  && python3 setup.py clean --all \
  && python3 setup.py build
