--- a/bgx/docker/settings/Dockerfile-bionic
+++ b/bgx/docker/settings/Dockerfile-bionic
@@ -17,33 +17,43 @@
 # docker build -f families/settings/Dockerfile -t sawtooth-settings-tp-local .
 
 FROM ubuntu:bionic
-
+ARG BGX_TOP
 RUN apt-get update \
- && apt-get install -y \
- curl \
- gcc \
- libssl-dev \
- libzmq3-dev \
- pkg-config \
- unzip
+ && apt-get install gnupg -y
+
+RUN echo "deb http://repo.sawtooth.me/ubuntu/ci bionic universe" >> /etc/apt/sources.list \
+ && (apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 8AA7AF1F1091A5FD \
+ || apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 8AA7AF1F1091A5FD) \
+ && apt-get update
+
+RUN apt-get install -y -q --allow-downgrades \
+    git \
+    python3 \
+    python3-stdeb
+
+RUN apt-get install -y -q --allow-downgrades \
+    python3-grpcio \
+    python3-grpcio-tools \
+    python3-protobuf
+
+RUN apt-get install -y -q --allow-downgrades \
+    python3-colorlog \
+    python3-toml \
+    python3-yaml \
+    python3-zmq
 
 # For Building Protobufs
-RUN curl -OLsS https://github.com/google/protobuf/releases/download/v3.5.1/protoc-3.5.1-linux-x86_64.zip \
- && unzip protoc-3.5.1-linux-x86_64.zip -d protoc3 \
- && rm protoc-3.5.1-linux-x86_64.zip
+#RUN curl -OLsS https://github.com/google/protobuf/releases/download/v3.5.1/protoc-3.5.1-linux-x86_64.zip \
+# && unzip protoc-3.5.1-linux-x86_64.zip -d protoc3 \
+# && rm protoc-3.5.1-linux-x86_64.zip
 
-RUN curl https://sh.rustup.rs -sSf > /usr/bin/rustup-init \
- && chmod +x /usr/bin/rustup-init \
- && rustup-init -y
 
-ENV PATH=$PATH:/project/sawtooth-core/bin:/protoc3/bin:/root/.cargo/bin \
-    CARGO_INCREMENTAL=0
+ENV PATH=$PATH:/project/$BGX_TOP/BGX/bin:/project/$BGX_TOP/bin:/protoc3/bin
 
-WORKDIR /project/sawtooth-core
+WORKDIR /project/$BGX_TOP
 
-CMD cd families/settings/sawtooth_settings \
- && echo "\033[0;32m--- Building settings-tp-rust ---\n\033[0m" \
- && rm -rf ./bin/ \
- && mkdir -p ./bin/ \
- && cargo build --release \
- && cp ./target/release/settings-tp ./bin/settings-tp
+CMD echo "\033[0;32m--- Building settings ---\n\033[0m" \
+ && bin/protogen \
+ && cd families/settings \
+ && python3 setup.py clean --all \
+ && python3 setup.py build
