docker for new python

--- a/bgx/families/bgt_python/Dockerfile-bionic
+++ b/bgx/families/bgt_python/Dockerfile-bionic
@@ -17,7 +17,7 @@
 # -------------=== intkey-tp-python build ===-------------
 
 FROM ubuntu:bionic
-
+ARG BGX_TOP
 RUN apt-get update \
  && apt-get install gnupg -y
 
@@ -41,16 +41,16 @@ RUN apt-get install -y -q \
     python3-colorlog \
     python3-toml \
     python3-yaml \
-    python3-zmq
+    python3-zmq python3-secp256k1
 
 RUN mkdir -p /var/log/sawtooth
 
-ENV PATH=$PATH:/project/sawtooth-core/bin
+ENV PATH=$PATH:/project/$BGX_TOP/bgx/bin:/project/$BGX_TOP/bin
 
-WORKDIR /project/sawtooth-core
+WORKDIR /project/$BGX_TOP
 
-CMD echo "\033[0;32m--- Building intkey-tp-python ---\n\033[0m" \
- && bin/protogen \
- && cd sdk/examples/intkey_python \
+CMD echo "\033[0;32m--- Building bgt-python ---\n\033[0m" \
+ && bgx/bin/protogen \
+ && cd bgx/families/bgt_python \
  && python3 setup.py clean --all \
  && python3 setup.py build
