--- a/bgx/docker/docker-compose-net-reg-pbft.yaml
+++ b/bgx/docker/docker-compose-net-reg-pbft.yaml
@@ -19,7 +19,7 @@ services:
   settings-tp:
     build:
       context: ../..
-      dockerfile: bgx/docker/settings/Dockerfile
+      dockerfile: bgx/docker/settings/Dockerfile-${DISTR}
       args:
         - http_proxy
         - https_proxy
@@ -48,7 +48,7 @@ services:
   bgt-tp-python:
     build:
       context: ../..
-      dockerfile: bgx/families/bgt_python/Dockerfile
+      dockerfile: bgx/families/bgt_python/Dockerfile-${DISTR}
       args:
         - http_proxy
         - https_proxy
@@ -77,7 +77,7 @@ services:
   bgx-registry:
     build:
       context: ../..
-      dockerfile: bgx/families/bgx_validator_registry/Dockerfile
+      dockerfile: bgx/families/bgx_validator_registry/Dockerfile-${DISTR}
       args:
         - http_proxy
         - https_proxy
@@ -138,7 +138,7 @@ services:
   client:
     build:
       context: ../..
-      dockerfile: bgx/docker/sawtooth-shell
+      dockerfile: bgx/docker/sawtooth-shell-${DISTR}
       args:
         - http_proxy
         - https_proxy
@@ -165,7 +165,7 @@ services:
   validator:
     build:
       context: ../..
-      dockerfile: bgx/docker/validator/Dockerfile
+      dockerfile: bgx/docker/validator/Dockerfile-${DISTR}
       args:
         - http_proxy
         - https_proxy
@@ -216,7 +216,7 @@ services:
   rest-api:
     build:
       context: ../..
-      dockerfile: bgx/docker/rest_api/Dockerfile
+      dockerfile: bgx/docker/rest_api/Dockerfile-${DISTR}
       args:
         - http_proxy
         - https_proxy
@@ -247,7 +247,7 @@ services:
   pbft-python:
     build:
       context: ../..
-      dockerfile: bgx/consensus/pbft_python/Dockerfile
+      dockerfile: bgx/consensus/pbft_python/Dockerfile-${DISTR}
       args:
         - http_proxy
         - https_proxy
