--- a/bgx/rest-api/docker-compose_aws.yaml
+++ b/bgx/rest-api/docker-compose_aws.yaml
@@ -15,7 +15,7 @@ services:
       - ./:/project/sawtooth-core
     container_name: rest-api-a
     ports:
-      - "8009:8009"
+      - "8007:8007"
 #    networks:
 #      - network1
 
@@ -29,7 +29,7 @@ services:
         cd ../
         python3 setup.py clean --all
         python3 setup.py build
-        sawtooth-rest-api -vv --connect tcp://18.222.233.160:4004  --bind rest-api-a:8009
+        sawtooth-rest-api -vv --connect tcp://18.222.233.160:4004  --bind rest-api-a:8007
       "
     stop_signal: SIGKILL
 
@@ -56,4 +56,4 @@ services:
 
 networks:
   network1:
-     name: bgx-network
+     name: bgx-network2
