--- a/bgx/docker/docker-compose-rest-api-stub.yaml
+++ b/bgx/docker/docker-compose-rest-api-stub.yaml
@@ -2,7 +2,7 @@ version: '3.6'
 
 services:
 
-  rest-api:
+  rest-api-stub:
     build:
       context: ../..
       dockerfile: bgx/rest-api-stub/Dockerfile
@@ -17,6 +17,8 @@ services:
     volumes:
       - ../..:/project/${BGX_TOP}
     container_name: rest-api-stub
+    networks:
+    - network1
     ports:
       - "8001:8001"
     # depends_on:
@@ -25,15 +27,15 @@ services:
       bash -c "
         bgx/bin/protogen
         cd bgx/rest-api-stub
-        cd chilkat-linux;ls -l;
+        cd chilkat-linux;
         python3 installChilkat.py
         cd ../
         python3 setup.py clean --all
         python3 setup.py build
-        bgx-rest-api-stub -v --bind rest-api:8001
+        bgx-rest-api-stub -v --bind rest-api-stub:8001
       "
     stop_signal: SIGKILL
 
 networks:
   network1:
-     name: bgx-network
+     name: bgx-net-stub
