--- a/bgx/docker/docker-compose-rest-api.yaml
+++ b/bgx/docker/docker-compose-rest-api.yaml
@@ -32,10 +32,10 @@ services:
         #cd ../
         python3 setup.py clean --all
         python3 setup.py build
-        bgx-rest-api -v --bind bgx-rest-api:8002
+        bgx-rest-api -vv --connect tcp://validator:4004 --bind bgx-rest-api:8002
       "
     stop_signal: SIGKILL
 
 networks:
   network1:
-     name: bgx-net-rest
+     name: bgx-network
