--- a/bgx/docker/docker-compose-rest-api.yaml
+++ b/bgx/docker/docker-compose-rest-api.yaml
@@ -32,7 +32,7 @@ services:
         #cd ../
         python3 setup.py clean --all
         python3 setup.py build
-        bgx-rest-api -vv --connect tcp://validator:4004 --bind bgx-rest-api:8008
+        bgx-rest-api -vv --connect tcp://localhost:4004 --bind bgx-rest-api:8008
       "
     stop_signal: SIGKILL
 
