--- a/bgx/docker/docker-compose-net-smart-bgx-1.yaml
+++ b/bgx/docker/docker-compose-net-smart-bgx-1.yaml
@@ -189,6 +189,38 @@ services:
       "
     stop_signal: SIGKILL
 
+  bgx-rest-api:
+    build:
+      context: ../..
+      dockerfile: bgx/rest-api/Dockerfile-${DISTR}
+      args:
+        - http_proxy
+        - https_proxy
+        - no_proxy
+        - BGX_TOP=bgx
+    image: bgx-rest-api
+    environment:
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
+    volumes:
+      - ../..:/project/${BGX_TOP}
+    container_name: bgx-rest-api
+    networks:
+    - network1
+    ports:
+      - "8008:8008"
+    # depends_on:
+    #   - validator
+    command: |
+      bash -c "
+        bgx/bin/protogen
+        cd bgx/rest-api
+        python3 setup.py clean --all
+        python3 setup.py build
+        bgx-rest-api -vv --connect tcp://validator:4004 --bind bgx-rest-api:8008
+      "
+    stop_signal: SIGKILL
+
+
   devmode-python:
     build:
       context: ../..
