--- a/bgx/docker/docker-compose-dashboard-bgx.yaml
+++ b/bgx/docker/docker-compose-dashboard-bgx.yaml
@@ -29,7 +29,7 @@ services:
         cd bgx/dashboard
         python3 setup.py clean --all
         python3 setup.py build
-        bgx-dashboard -v --bind bgx-dashboard:8003
+        bgx-dashboard -vv  --connect tcp://18.222.233.160:4004 --bind bgx-dashboard:8003
       "
     stop_signal: SIGKILL
 
