--- a/bgx/validator/Dockerfile-bionic
+++ b/bgx/validator/Dockerfile-bionic
@@ -51,8 +51,8 @@ RUN apt-get install -y -q \
     python3-toml \
     python3-yaml \
     python3-zmq \
-    unzip       \
-    iputils-ping
+    unzip  iputils-ping
+
 
 RUN curl -OLsS https://github.com/google/protobuf/releases/download/v3.5.1/protoc-3.5.1-linux-x86_64.zip \
  && unzip protoc-3.5.1-linux-x86_64.zip -d protoc3 \
