--- a/bgx/dashboard/bjx/package.json
+++ b/bgx/dashboard/bjx/package.json
@@ -62,6 +62,7 @@
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
+    "react-table": "^6.8.6",
     "react-vis-force": "^0.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
