--- a/bgx/docker/docker-compose-rest-api.yaml
+++ b/bgx/docker/docker-compose-rest-api.yaml
@@ -17,8 +17,8 @@ services:
     volumes:
       - ../..:/project/${BGX_TOP}
     container_name: bgx-rest-api
-#    networks:
-#    - network1
+    networks:
+    - network1
     ports:
       - "8008:8008"
     # depends_on:
@@ -32,10 +32,10 @@ services:
         #cd ../
         python3 setup.py clean --all
         python3 setup.py build
-        bgx-rest-api -vv --connect tcp://18.222.233.160:4004 --bind bgx-rest-api:8008
+        bgx-rest-api -vv --connect tcp://validator:4004 --bind bgx-rest-api:8008
       "
     stop_signal: SIGKILL
 
-#networks:
-#  network1:
-#     name: bgx-network
+networks:
+  network1:
+     name: bgx-network
