--- a/bgx/docker/docker-compose-net-reg-pbft-aws1.yaml
+++ b/bgx/docker/docker-compose-net-reg-pbft-aws1.yaml
@@ -104,34 +104,34 @@ services:
 #    stop_signal: SIGKILL
 
 
-#  smart-bgt-tp-python:
-#    build:
-#      context: ../..
-#      dockerfile: bgx/families/smart_bgt_python/Dockerfile
-#      args:
-#        - http_proxy
-#        - https_proxy
-#        - no_proxy
-#        - BGX_TOP=bgx
-#    image: smart-bgt-tp-python-bgx:${ISOLATION_ID}
-#    environment:
-#    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
-#    networks:
-#    - network1
-#    volumes:
-#      - ../..:/project/${BGX_TOP}
-#    container_name: smart-bgt-tp-python-bgx
-#    depends_on:
-#      - validator
-#    command: |
-#      bash -c "
-#        bgx/bin/protogen
-#        cd bgx/families/smart_bgt_python
-#        python3 setup.py clean --all
-#        python3 setup.py build
-#        ../../bin/smart-bgt-tp-python -vv -C tcp://validator:4004
-#      "
-#    stop_signal: SIGKILL
+  smart-bgt-tp-python:
+    build:
+      context: ../..
+      dockerfile: bgx/families/smart_bgt_python/Dockerfile
+      args:
+        - http_proxy
+        - https_proxy
+        - no_proxy
+        - BGX_TOP=bgx
+    image: smart-bgt-tp-python-bgx:${ISOLATION_ID}
+    environment:
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
+    networks:
+    - network1
+    volumes:
+      - ../..:/project/${BGX_TOP}
+    container_name: smart-bgt-tp-python-bgx
+    depends_on:
+      - validator
+    command: |
+      bash -c "
+        bgx/bin/protogen
+        cd bgx/families/smart_bgt_python
+        python3 setup.py clean --all
+        python3 setup.py build
+        ../../bin/smart-bgt-tp-python -vv -C tcp://validator:4004
+      "
+    stop_signal: SIGKILL
 
 
 
@@ -201,7 +201,7 @@ services:
         if [ -f 'lib/libsawtooth_validator.so' ]; then echo 'Already copied'; else cp ./target/release/libsawtooth_validator.so lib/libsawtooth_validator.so; fi
         sawadm keygen
         sawtooth keygen my_key
-        sawset proposal create -k /root/.sawtooth/keys/my_key.priv -o sawset.batch sawtooth.consensus.algorithm=pbft sawtooth.consensus.pbft.max_log_size=20 sawtooth.consensus.pbft.nodes=\"{'0281e398fc978e8d36d6b2244c71e140f3ee464cb4c0371a193bb0a5c6574810ba': 'leader','028c7e06db3af50a9958390e3e29f166b1cf6198586acf37cde46c8ea54e4a79ef': 'plink'}\"
+        sawset proposal create -k /root/.sawtooth/keys/my_key.priv -o sawset.batch sawtooth.consensus.algorithm=pbft sawtooth.consensus.pbft.max_log_size=20 sawtooth.consensus.pbft.nodes=\"{'0260023e2d31197ae2c226705f9af43667bf4d76f88ddffc3ae75671aacc862a42': 'leader','02afe771336d5414c7f421907c7bfb0ad2734a3f1a3797e8468cce712dc8af2b84': 'plink'}\"
         sawset genesis -k /root/.sawtooth/keys/my_key.priv
         #ls -l /var/lib/
         rm -f ../data-bgx/data/* ../data-bgx/logs/*.log*;sawadm genesis config-genesis.batch sawset.batch 
@@ -231,7 +231,7 @@ services:
     networks:
     - network1
     ports:
-      - "8008:8008" 
+      - "8018:8018" 
     depends_on:
        - validator
     command: |
@@ -240,7 +240,7 @@ services:
         cd bgx/rest-api
         python3 setup.py clean --all
         python3 setup.py build
-        bgx-rest-api -vv --connect tcp://validator:4004 --bind bgx-api:8008
+        bgx-rest-api -vv --connect tcp://validator:4004 --bind bgx-api:8018
       "
     stop_signal: SIGKILL
 
