--- a/bgx/docker/docker-compose-net-reg-pbft-loc-n.yaml
+++ b/bgx/docker/docker-compose-net-reg-pbft-loc-n.yaml
@@ -104,34 +104,34 @@ services:
 #    stop_signal: SIGKILL
 
 
-#  smart-bgt-tp-python:
-#    build:
-#      context: ../..
-#      dockerfile: bgx/families/smart_bgt_python/Dockerfile
-#      args:
-#        - http_proxy
-#        - https_proxy
-#        - no_proxy
-#        - BGX_TOP=bgx
-#    image: smart-bgt-tp-python-bgx:${ISOLATION_ID}
-#    environment:
-#    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
-#    networks:
-#    - network1
-#    volumes:
-#      - ../..:/project/${BGX_TOP}
-#    container_name: smart-bgt-tp-python-bgx
-#    depends_on:
-#      - validator
-#    command: |
-#      bash -c "
-#        bgx/bin/protogen
-#        cd bgx/families/smart_bgt_python
-#        python3 setup.py clean --all
-#        python3 setup.py build
-#        ../../bin/smart-bgt-tp-python -vv -C tcp://validator:4004
-#      "
-#    stop_signal: SIGKILL
+  smart-bgt-tp-python:
+    build:
+      context: ../..
+      dockerfile: bgx/families/smart_bgt_python/Dockerfile
+      args:
+        - http_proxy
+        - https_proxy
+        - no_proxy
+        - BGX_TOP=bgx
+    image: smart-bgt-tp-python-bgx:${ISOLATION_ID}
+    environment:
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
+    networks:
+    - network1
+    volumes:
+      - ../..:/project/${BGX_TOP}
+    container_name: smart-bgt-tp-python-bgx
+    depends_on:
+      - validator
+    command: |
+      bash -c "
+        bgx/bin/protogen
+        cd bgx/families/smart_bgt_python
+        python3 setup.py clean --all
+        python3 setup.py build
+        ../../bin/smart-bgt-tp-python -vv -C tcp://validator:4004
+      "
+    stop_signal: SIGKILL
 
 
 
@@ -191,7 +191,7 @@ services:
     command: |
       bash -c "
         bgx/bin/protogen
-        cd validator
+        cd validator-n
         python3 setup.py clean --all
         python3 setup.py build
         mkdir -p bin
@@ -205,7 +205,7 @@ services:
         sawset genesis -k /root/.sawtooth/keys/my_key.priv
         #ls -l /var/lib/
         rm -f ../data-bgx/data/* ../data-bgx/logs/*.log*;sawadm genesis config-genesis.batch sawset.batch 
-        sawtooth-validator -vv  \
+        sawtooth-validator-n -vv  \
             --endpoint tcp://validator:8800 \
             --bind component:tcp://eth0:4004 \
             --bind network:tcp://eth0:8800 \
@@ -231,7 +231,7 @@ services:
     networks:
     - network1
     ports:
-      - "8008:8008" 
+      - "8018:8018" 
     depends_on:
        - validator
     command: |
@@ -240,7 +240,7 @@ services:
         cd bgx/rest-api
         python3 setup.py clean --all
         python3 setup.py build
-        bgx-rest-api -vv --connect tcp://validator:4004 --bind bgx-api:8008
+        bgx-rest-api -vv --connect tcp://validator:4004 --bind bgx-api:8018
       "
     stop_signal: SIGKILL
 
