--- a/bgx/docker/docker-compose-net-reg-val-pbft.yaml
+++ b/bgx/docker/docker-compose-net-reg-val-pbft.yaml
@@ -34,14 +34,14 @@ services:
       - ../..:/project/${BGX_TOP}
     container_name: sawtooth-settings-tp-bgx
     depends_on:
-      - validator
+      - validator-bgx
     command: |
       bash -c "
         bgx/bin/protogen
         cd families/settings
         python3 setup.py clean --all
         python3 setup.py build
-        settings-tp -vv -C tcp://validator:4004
+        settings-tp -vv -C tcp://validator-bgx:4004
       "
     stop_signal: SIGKILL
 
@@ -63,45 +63,45 @@ services:
       - ../..:/project/${BGX_TOP}
     container_name: bgt-tp-python-bgx
     depends_on:
-      - validator
+      - validator-bgx
     command: |
       bash -c "
         bgx/bin/protogen
         cd bgx/families/bgt_python
         python3 setup.py clean --all
         python3 setup.py build
-        bgt-tp-python -vv -C tcp://validator:4004
+        bgt-tp-python -vv -C tcp://validator-bgx:4004
       "
     stop_signal: SIGKILL
 
-#  bgx-registry:
-#    build:
-#      context: ../..
-#      dockerfile: bgx/families/bgx_validator_registry/Dockerfile-${DISTR}
-#      args:
-#        - http_proxy
-#        - https_proxy
-#        - no_proxy
-#        - BGX_TOP=bgx
-#    image: bgx-validator-registry:${ISOLATION_ID}
-#    environment:
-#    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
-#    networks:
-#    - network1
-#    volumes:
-#      - ../..:/project/${BGX_TOP}
-#    container_name: bgx-validator-registry
-#    depends_on:
-#      - validator
-#    command: |
-#      bash -c "
-#        bgx/bin/protogen
-#        cd bgx/families/bgx_validator_registry
-#        python3 setup.py clean --all
-#        python3 setup.py build
-#        bgx-validator-registry -vv -C tcp://validator:4004
-#      "
-#    stop_signal: SIGKILL
+  bgx-registry:
+    build:
+      context: ../..
+      dockerfile: bgx/families/bgx_validator_registry/Dockerfile-${DISTR}
+      args:
+        - http_proxy
+        - https_proxy
+        - no_proxy
+        - BGX_TOP=bgx
+    image: bgx-validator-registry:${ISOLATION_ID}
+    environment:
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
+    networks:
+    - network1
+    volumes:
+      - ../..:/project/${BGX_TOP}
+    container_name: bgx-validator-registry
+    depends_on:
+      - validator-bgx
+    command: |
+      bash -c "
+        bgx/bin/protogen
+        cd bgx/families/bgx_validator_registry
+        python3 setup.py clean --all
+        python3 setup.py build
+        bgx-validator-registry -vv -C tcp://validator-bgx:4004
+      "
+    stop_signal: SIGKILL
 
 
 #  smart-bgt-tp-python:
@@ -122,14 +122,14 @@ services:
 #      - ../..:/project/${BGX_TOP}
 #    container_name: smart-bgt-tp-python-bgx
 #    depends_on:
-#      - validator
+#      - validator-bgx
 #    command: |
 #      bash -c "
 #        bgx/bin/protogen
 #        cd bgx/families/smart_bgt_python
 #        python3 setup.py clean --all
 #        python3 setup.py build
-#        ../../bin/smart-bgt-tp-python -vv -C tcp://validator:4004
+#        ../../bin/smart-bgt-tp-python -vv -C tcp://validator-bgx:4004
 #      "
 #    stop_signal: SIGKILL
 
@@ -153,7 +153,7 @@ services:
       - ../..:/project/${BGX_TOP}
     container_name: sawtooth-shell-bgx
     depends_on:
-      - validator
+      - validator-bgx
     command: |
       bash -c "
         ls -l;sawtooth keygen --force &&
@@ -162,23 +162,23 @@ services:
     stop_signal: SIGKILL
 
 
-  validator:
+  validator-bgx:
     build:
       context: ../..
-      dockerfile: bgx/docker/validator/Dockerfile-${DISTR}
+      dockerfile: bgx/validator/Dockerfile-${DISTR}
       args:
         - http_proxy
         - https_proxy
         - no_proxy
         - BGX_TOP=bgx
-    image: sawtooth-validator-bgx:${ISOLATION_ID}
+    image: validator-bgx:${ISOLATION_ID}
     networks:
     - network1
     environment:
     - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
     volumes:
       - ../..:/project/${BGX_TOP}
-    container_name: sawtooth-validator-bgx
+    container_name: validator-bgx
     expose:
       - 4004
       - 8800
@@ -187,26 +187,20 @@ services:
       - "4004:4004"
       - "8800:8800"
     # start the validator with an empty genesis batch
-    # cargo build --release sawadm keygen && sawtooth keygen my_key && sawset genesis -k /root/.sawtooth/keys/my_key.priv && sawadm genesis config-genesis.batch && 
     command: |
       bash -c "
         bgx/bin/protogen
-        cd validator
+        rm -f data-bgx/data/* data-bgx/logs/*.log*;
+        ls -l ;cd bgx/validator
         python3 setup.py clean --all
         python3 setup.py build
-        mkdir -p bin
-        mkdir -p lib
-        if [ -d 'target' ]; then echo 'Already build'; else cargo build --release; fi
-        if [ -f 'bin/sawtooth-validator' ]; then echo 'Already copied'; else cp ./target/release/sawtooth-validator bin/sawtooth-validator; fi
-        if [ -f 'lib/libsawtooth_validator.so' ]; then echo 'Already copied'; else cp ./target/release/libsawtooth_validator.so lib/libsawtooth_validator.so; fi
         sawadm keygen
         sawtooth keygen my_key
-        sawset proposal create -k /root/.sawtooth/keys/my_key.priv -o sawset.batch sawtooth.consensus.algorithm=pbft sawtooth.consensus.pbft.max_log_size=20 sawtooth.consensus.pbft.nodes=\"{'0281e398fc978e8d36d6b2244c71e140f3ee464cb4c0371a193bb0a5c6574810ba': 'leader','028c7e06db3af50a9958390e3e29f166b1cf6198586acf37cde46c8ea54e4a79ef': 'plink'}\"
-        sawset genesis -k /root/.sawtooth/keys/my_key.priv
-        #ls -l /var/lib/
-        rm -f ../data-bgx/data/* ../data-bgx/logs/*.log*;sawadm genesis config-genesis.batch sawset.batch 
-        sawtooth-validator -vv  \
-            --endpoint tcp://validator:8800 \
+        sawset proposal create -k /root/.sawtooth/keys/my_key.priv -o sawset.batch sawtooth.consensus.algorithm=pbft sawtooth.consensus.pbft.node=plink sawtooth.consensus.pbft.max_log_size=20
+        sawset genesis -k /root/.sawtooth/keys/my_key.priv 
+        sawadm genesis config-genesis.batch  sawset.batch
+        validator-bgx -vv  \
+            --endpoint tcp://validator-bgx:8800 \
             --bind component:tcp://eth0:4004 \
             --bind network:tcp://eth0:8800 \
             --bind consensus:tcp://eth0:5050 \
@@ -233,14 +227,14 @@ services:
     ports:
       - "8008:8008" 
     depends_on:
-       - validator
+       - validator-bgx
     command: |
       bash -c "
         bgx/bin/protogen
         cd bgx/rest-api
         python3 setup.py clean --all
         python3 setup.py build
-        bgx-rest-api -vv --connect tcp://validator:4004 --bind bgx-api:8008
+        bgx-rest-api -vv --connect tcp://validator-bgx:4004 --bind bgx-api:8008
       "
     stop_signal: SIGKILL
 
@@ -264,14 +258,14 @@ services:
 #    ports:
 #      - "8008:8008"
 #    depends_on:
-#      - validator
+#      - validator-bgx
 #    command: |
 #      bash -c "
 #        bgx/bin/protogen
 #        cd rest_api
 #        python3 setup.py clean --all
 #        python3 setup.py build
-#        sawtooth-rest-api -vv --connect tcp://validator:4004 --bind rest-api:8008
+#        sawtooth-rest-api -vv --connect tcp://validator-bgx:4004 --bind rest-api:8008
 #      "
 #    stop_signal: SIGKILL
 
@@ -293,17 +287,48 @@ services:
       - ../..:/project/${BGX_TOP}
     container_name: sawtooth-pbft-python-bgx
     depends_on:
-      - validator
-#      - bgx-registry
+      - validator-bgx
+    #  - bgx-registry
     command: |
       bash -c "
         bgx/bin/protogen
         cd bgx/consensus/pbft_python
         python3 setup.py clean --all
         python3 setup.py build
-        pbft-python -vv --connect tcp://validator:5050 --component tcp://validator:4004
+        pbft-python -vv --connect tcp://validator-bgx:5050 --component tcp://validator-bgx:4004
       "
     stop_signal: SIGKILL
+
+
+#  devmode-python:
+#   build:
+#     context: ../..
+#     dockerfile: bgx/consensus/devmode_python/Dockerfile-${DISTR}
+#     args:
+#       - http_proxy
+#       - https_proxy
+#       - no_proxy
+#       - BGX_TOP=bgx
+#   image: devmode-python-bgx:${ISOLATION_ID}
+#   networks:
+#   - network1
+#   environment:
+#   - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
+#   volumes:
+#     - ../..:/project/${BGX_TOP}
+#   container_name: devmode-python-bgx
+#   depends_on:
+#     - validator-bgx
+#   command: |
+#     bash -c "
+#       bgx/bin/protogen
+#       cd bgx/consensus/devmode_python
+#       python3 setup.py clean --all
+#       python3 setup.py build
+#       devmode-python -vv --connect tcp://validator-bgx:5050 --component tcp://validator-bgx:4004
+#     "
+#   stop_signal: SIGKILL
+
 
 networks:
   network1:
