--- a/bgx/docker/docker-compose-net-smart-val-aws.yaml
+++ b/bgx/docker/docker-compose-net-smart-val-aws.yaml
@@ -235,36 +235,36 @@ services:
       "
     stop_signal: SIGKILL
 
-#  bgx-api:
-#    build:
-#      context: ../..
-#      dockerfile: bgx/rest-api/Dockerfile-${DISTR}
-#      args:
-#        - http_proxy   
-#        - https_proxy
-#        - no_proxy
-#        - BGX_TOP=bgx
-#    image: bgx-rest-api
-#    environment:
-#    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
-#    volumes:
-#      - ../..:/project/${BGX_TOP}
-#    container_name: bgx-api
-#    networks:
-#    - network1
-#    ports:
-#      - "8008:8008" 
-#    depends_on:
-#       - validator-bgx
-#    command: |
-#      bash -c "
-#        bgx/bin/protogen
-#        cd bgx/rest-api
-#        python3 setup.py clean --all
-#        python3 setup.py build
-#        bgx-rest-api -vv --connect tcp://validator-bgx:4004 --bind bgx-api:8008
-#      "
-#    stop_signal: SIGKILL
+  bgx-api:
+    build:
+      context: ../..
+      dockerfile: bgx/rest-api/Dockerfile-${DISTR}
+      args:
+        - http_proxy
+        - https_proxy
+        - no_proxy
+        - BGX_TOP=bgx
+    image: bgx-rest-api
+    environment:
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
+    volumes:
+      - ../..:/project/${BGX_TOP}
+    container_name: bgx-api
+    networks:
+    - network1
+    ports:
+      - "8008:8008"
+    depends_on:
+       - validator-bgx
+    command: |
+      bash -c "
+        bgx/bin/protogen
+        cd bgx/rest-api
+        python3 setup.py clean --all
+        python3 setup.py build
+        bgx-rest-api -vv --connect tcp://validator-bgx:4004 --bind bgx-api:8008
+      "
+    stop_signal: SIGKILL
 
 
 #  pbft-python:
