--- a/bgx/docker/docker-compose-netall-reg-dev-loc.yaml
+++ b/bgx/docker/docker-compose-netall-reg-dev-loc.yaml
@@ -64,7 +64,6 @@ services:
     container_name: bgt-tp-python-bgx
     depends_on:
       - validator
-      - 
     command: |
       bash -c "
         bgx/bin/protogen
@@ -101,7 +100,7 @@ services:
         cd bgx/families/smart_bgt_python
         python3 setup.py clean --all
         python3 setup.py build
-        ../../bin/smart-bgt-tp-python -vv -C tcp://validator:4004
+        smart-bgt-tp-python -vv -C tcp://validator:4004
       "
     stop_signal: SIGKILL
 
