--- a/data-bgx/etc/validator.toml
+++ b/data-bgx/etc/validator.toml
@@ -53,7 +53,7 @@ peers = ["tcp://validator-2:8801"]
 
 # The type of scheduler to use. The choices are 'serial' or 'parallel'.
 scheduler = 'serial'
-
+database  = 'uri://admin:foo@orientdb:2424/blocks'
 # A Curve ZMQ key pair are used to create a secured network based on side-band
 # sharing of a single network key pair to all participating nodes.
 # Note if the config file does not exist or these are not set, the network
