--- a/bgx/docker/docker-compose-net-odb-dev-loc.yaml
+++ b/bgx/docker/docker-compose-net-odb-dev-loc.yaml
@@ -11,7 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
+# FOR BGX VALIDATOR with ORIENTDB
 version: '3.6'
 
 services:
