change consensus for working with DAG

--- a/bgx/docker/docker-compose-net-bgx-val-pbft.yaml
+++ b/bgx/docker/docker-compose-net-bgx-val-pbft.yaml
@@ -155,7 +155,7 @@ services:
       - validator-bgx
     command: |
       bash -c "
-        ls -l;sawtooth keygen --force &&
+        sawtooth keygen --force &&
         tail -f /dev/null
       "
     stop_signal: SIGKILL
