--- a/bgx/docker/docker-compose-dashboard-bgx2.yaml
+++ b/bgx/docker/docker-compose-dashboard-bgx2.yaml
@@ -29,7 +29,7 @@ services:
         cd bgx/dashboard
         python3 setup.py clean --all
         python3 setup.py build
-        bgx-dashboard -vv  --connect tcp://validator-2:4006 --bind bgx-dashboard-2:8004
+        bgx-dashboard -vv  --connect tcp://validator-bgx-2:4006 --bind bgx-dashboard-2:8004
       "
     stop_signal: SIGKILL
 
