test dag for 3 peers

--- a/data-bgx/etc/validator.toml
+++ b/data-bgx/etc/validator.toml
@@ -49,7 +49,7 @@ endpoint = "tcp://validator:8800"
 
 # A list of peers to attempt to connect to in the format tcp://hostname:port.
 # It defaults to None. Replace host1 with the peer's hostname or IP address.
-peers = ["tcp://validator-bgx-2:8801"]
+peers = ["tcp://validator-bgx-2:8801","tcp://validator-bgx-3:8802"]
 
 # The type of scheduler to use. The choices are 'serial' or 'parallel'.
 scheduler = 'serial'
